--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pandas==0.20.3
 pandocfilters==1.4.2
 pexpect==4.2.1
 pickleshare==0.7.4
+pkg-resources==0.0.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
@@ -33,6 +34,7 @@ pytz==2017.2
 pyzmq==16.0.2
 qtconsole==4.3.1
 scikit-learn==0.19.0
+scipy==0.19.1
 simplegeneric==0.8.1
 six==1.10.0
 sklearn==0.0
